@@ -35,6 +35,12 @@
 <div class="topic">
 	<h3>CHANGELOG</h3>
 	<div class="pad">
+		<span><b>2020-10-03</b></span>
+		<div id="changelog20201003">
+			<ul>
+				<li>Added Antonio's set</li>
+			</ul>
+		</div><br>
 		<span><b>2020-10-01</b></span>
 		<div id="changelog20201001">
 			<ul>
