@@ -279,8 +279,8 @@ cardOBJ = [
 ,[257,6,"Gajomart",0,123,10,53,-20,0]
 ,[258,5,"Kapha","If refined to +5 or less, gain MDEF+8",0]
 ,[259,1,"Crab","Increase damage on [Aster] by 30%",1240,30,17,5,0]
-,[260,7,"Shinobi","10% chance of casting lv5 [Cloaking] when recieving ATK based damage",2,1,0]
-,[261,4,"Karakasa","3% chance of inflicting [Chaos] when recieving ATK based damage<BR>If the user has 77 Base STR or higher, 9% chance instead",0]
+,[260,7,"Shinobi","10% chance of casting lv5 [Cloaking] when receiving ATK based damage",2,1,0]
+,[261,4,"Karakasa","3% chance of inflicting [Chaos] when receiving ATK based damage<BR>If the user has 77 Base STR or higher, 9% chance instead",0]
 ,[262,7,"Galapago","3% chance of obtaining Apple Juice, Banana Juice and Carrot Juice when killing an Insect race monster<BR>Increase recovery by 50% with those items",0]
 ,[263,1,"Gig","Regain 5 SP when killing a Insect race monster with a ATK based attack<BR>Drains 5 SP when the weapon is unequipped",0]
 ,[264,4,"Chimera","3% chance of inflicting Poison status when receiving ATK based damage<BR>If equipped by an Assassin job type, 9% chance instead",0]
