@@ -1,4 +1,5 @@
-[2020-10-01]
+[2020-10-03]
+- Added Antonio's set
 - Fixed Palace Guard refine bonus
 - Added HJ and EQ skills to Lost Dragon
 - Fixed Tarou + Clamp cards combo applying twice
